[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F042 microcontrollers"
documentation = "https://docs.rs/stm32f042-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f042",
    "hal",
]
license = "0BSD"
name = "stm32f042-hal"
repository = "https://github.com/therealprof/stm32f042-hal"
version = "0.5.0"

[dependencies]
bare-metal = "0.2.3"
cortex-m = "0.5.7"
cortex-m-rt = "0.6.1"
nb = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.stm32f042]
features = ["rt"]
version = "0.6.2"

[dev-dependencies]
ina260 = "0.2.2"
numtoa = "0.1.0"
panic-abort = "0.3.0"

[features]
default = ["rt"]
rt = []

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
