[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F042 microcontrollers"
documentation = "https://docs.rs/stm32f042-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f042",
    "hal",
]
license = "0BSD"
name = "stm32f042-hal"
readme = "README.md"
repository = "https://github.com/therealprof/stm32f042-hal"
version = "0.6.1"

[dependencies]
bare-metal = { version = "0.2.3", features = ["const-fn"] }
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
nb = "0.1.1"
void = { version = "1.0.2", default-features = false }

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.stm32f0]
features = [
    "stm32f0x2",
    "rt",
]
version = "0.3.2"

[dev-dependencies]
ina260 = "0.2.2"
numtoa = "0.2.3"
panic-abort = "0.3.1"

[features]
default = ["rt"]
rt = []

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
